# matscreen

./: .gitignore  Makefile  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
configs/: calibration.yaml  ensemble.yaml  screening.yaml
configs/data/: jarvis.yaml  materials_project.yaml
configs/models/: baseline_xgb.yaml
scripts/: record_demo.py
site/: index.html
src/matscreen/: dashboard.py
src/matscreen/cli/: app.py
src/matscreen/cli/commands/: data.py  evaluate.py  report.py  screen.py  train.py
src/matscreen/data/: cache.py  jarvis_client.py  mp_client.py  schema.py
src/matscreen/evaluation/: __init__.py  roi.py
src/matscreen/features/: __init__.py  composition.py
src/matscreen/models/: __init__.py  protocols.py  xgboost_ensemble.py
src/matscreen/screening/: engine.py  filters.py  objectives.py  pareto.py  scorer.py  solar.py
src/matscreen/uncertainty/: __init__.py  calibration.py  ood.py  triage.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_cache.py  test_calibration.py  test_composition.py  test_filters.py  test_objectives.py  test_ood.py  test_pareto.py  test_roi.py  test_schema.py  test_solar.py  test_triage.py  test_xgboost_ensemble.py
