[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "matscreen"
version = "0.1.0"
description = "Uncertainty-aware materials screening with calibrated confidence intervals"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pymatgen>=2024.1.1",
    "mp-api>=0.41.0",
    "jarvis-tools>=2024.1.1",
    "alignn>=2024.1.1",
    "torch>=2.1.0,<2.3.0",
    "dgl>=1.1.0,<2.2.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "matminer>=0.9.0",
    "uncertainty-toolbox>=0.2.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "plotly>=5.18.0",
    "streamlit>=1.30.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pandas-stubs",
]
tracking = [
    "wandb>=0.16.0",
]

[project.scripts]
matscreen = "matscreen.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/matscreen"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
